# lbp-image-classifier

./: .gitignore  CMakeLists.txt
header_files/: base.hpp  image.hpp  lbp_classifier.hpp  lbp_descriptor.hpp  opencv_headers.hpp
source_files/: image.cpp  lbp_classifier.cpp  lbp_descriptor.cpp  main.cpp
